--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,25 @@
     src: url("../fonts/gilroyextrabold.woff2");
 }
 
+/* open-sans-300 - latin_cyrillic */
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/open-sans-v34-latin_cyrillic-300.eot'); /* IE9 Compat Modes */
+    src: local(''),        
+         url('../fonts/open-sans-v34-latin_cyrillic-300.woff2') format('woff2'), /* Super Modern Browsers */         
+  }
+  /* open-sans-regular - latin_cyrillic */
+  @font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/open-sans-v34-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),         
+         url('../fonts/open-sans-v34-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */         
+  }
+
 .visually-hidden{
     margin: -1;
     padding: 0px;
@@ -18,7 +37,8 @@
     overflow: hidden;
 }
 
-body{
+body{    
+    font-family: 'Open Sans';
     margin: 0px;
     padding: 0px;
     background-color: white;
@@ -40,15 +60,14 @@ body{
     background-image: url("../img/search.svg");
     background-size: 16px;
     background-position: 0px 0px;
-    background-repeat: no-repeat;
-    
+    background-repeat: no-repeat;    
     
     padding: 0%;
     padding-left: 38px;
     margin: 0%;
-
-
-    font-family: sans-serif;
+    
+    font-family: 'Open Sans';
+    font-weight: 300;
     font-size: 15px;
     opacity: 1;
     color: black;
@@ -68,14 +87,13 @@ body{
     width: 1040px; 
     height: 18px;   
 
-    background-color: #f7e296 ;
-  
+    background-color: #f7e296 ;  
 }
 
-.Logo{    
+.header-logo h1{    
     position: absolute;
     top: 10px;
-    left: calc(50% - 520px);
+    left: calc(50% - 523px);
     margin: 0px;
     padding: 0px;
     border-style: none;
@@ -86,4 +104,13 @@ body{
     text-transform: uppercase;
     color: black;
 }
-  
+ 
+.header-logo a:focus, .header-logo a:hover{    
+    opacity: 0.6;
+    
+}
+
+.header-logo a:active{    
+    opacity: 0.3;
+    
+}
